--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   plugin_platform_interface: ^2.1.4
   ffi: ^2.0.1
   path: ^1.8.2
-  win32: ^4.1.3
+  win32: '>=4.1.3'
   image_picker: ^1.0.4
   cross_file: ^0.3.3+4
 dev_dependencies:
